--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,11 @@ body {
     color: white;
     font-size: 1.5rem;
   }
-  .popup .show {
+  .show {
     visibility: visible;
     
+    
+    
   }
+  
+ 
