--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
     display: block;
     height: 100%;
     width: 100%;
+    
 }
 .title-container {
     height: 25%;
@@ -93,6 +94,7 @@ body {
     height: 600px;
     width: 400px;
     position: absolute;
+    top: 20%;
     left: 37%;
     display: flex;
     flex-direction: column;
@@ -101,6 +103,8 @@ body {
     border: 1px solid black;
     border-radius: 10px;
     background-color: white;
+    
+    
   }
   .popup h1 {
     font-weight: 400;
@@ -144,11 +148,43 @@ body {
     color: white;
     font-size: 1.5rem;
   }
+  .close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    width: 10px;
+    height: 10px;
+    opacity: 0.3;
+    background: transparent;
+  }
+  .close:hover {
+    opacity: 1;
+  }
+  .close:before, .close:after {
+    position: absolute;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color:  #095776;
+  }
+  .close:before {
+    transform: rotate(45deg);
+  }
+  .close:after {
+    transform: rotate(-45deg);
+  }
+  
+  
+  
+
+
+
   .show {
     visibility: visible;
     
-    
-    
+   
   }
   
- 
+  .blur {
+   filter: blur(2px);
+  }
