--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&family=Roboto:wght@100;300;400;700&display=swap');
 * {
     margin: 0;
     padding: 0;
     border: 0;
 }
 html {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     display: block;
     height: 100%;
@@ -15,6 +15,7 @@ body {
     display: block;
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 .container {
     display: block;
@@ -33,8 +34,9 @@ body {
 }
 .title {
     font-size: 3rem;
-    font-weight: 400;
-    display: flex
+    font-weight: 500;
+    display: flex; 
+    font-family: 'Open Sans', sans-serif;
 }
 .library-container {
     height: 75%;
@@ -188,12 +190,76 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    gap: 50px;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    font-weight: 300;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
    
   }
   #card-title {
-    margin-top: 5%;
+    background-color:#457b9d;
+    height: 16.6%;
+    border: .5px solid black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+  }
+  #card-author {
+    height: 16.6%;
+    background-color:#457b9d;
+    border: .5px solid black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #card-pages {
+    height: 16.6%;
+    background-color:#457b9d;
+    border: .5px solid black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #card-read {
+    height: 16.6%;
+    background-color:#457b9d;
+    border: .5px solid black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .change-read {
+    height: 16.6%;
+    background-color:#457b9d;
+    background-color: #a8dadc;
+    border: .5px solid black;
+    border-radius: 3px;
+  
+    
+  }
+  .delete-book {
+    height: 17%;
+    background-color: #e63946;
+    border: .5px solid black;
+    border-radius: 3px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+  }
+  #change-read-img {
+    height: 50%;
+    
+  }
+  #delete-book-img {
+    height: 50%;
+   
   }
   .cards-grid {
     margin-left: 1%;
